# sos

./: .gitignore  ARCHITECTURE.md  Cargo.toml  INSTRUCTIONS.md  Makefile  PACKET_FILTER.md  README.md  boot_iso_qemu.sh  boot_qemu.sh  build_iso.sh  phase5.md
.cargo/: config.toml
coverage/: coverage.json  storage-missing.txt
coverage/html/html/: index.html
coverage/html/html/coverage/home/manoelhc/Documents/Local/sos/src/: framekernel.rs.html  lib.rs.html  sync.rs.html
coverage/html/html/coverage/home/manoelhc/Documents/Local/sos/src/allocator/: buddy.rs.html  slab.rs.html
coverage/html/html/coverage/home/manoelhc/Documents/Local/sos/src/crypto/: mod.rs.html
coverage/html/html/coverage/home/manoelhc/Documents/Local/sos/src/network/: stack.rs.html  tls.rs.html  virtio.rs.html
coverage/html/html/coverage/home/manoelhc/Documents/Local/sos/src/storage/: mod.rs.html
docs/: sosfs.md
grub/: grub.cfg
scripts/: phase4-stress.sh
src/: framekernel.rs  lib.rs  sync.rs
src/allocator/: buddy.rs  mod.rs  slab.rs
src/console/: mod.rs
src/crypto/: mod.rs
src/fs/: mod.rs  sosfs.rs
src/network/: mod.rs  readiness.rs  stack.rs  tls.rs  virtio.rs
src/pf/: mod.rs
src/process/: mod.rs
src/storage/: mod.rs
tools/sosfs-mkfs/: README.md
~/.config/pipewire/: client.conf
